feat: add landing adaptive upto schem part

--- a/online-zoo/pages/landing/index.html
+++ b/online-zoo/pages/landing/index.html
@@ -53,7 +53,9 @@
             </a>
           </div>
           <div class="top__background">
-            <img class="background__drops-1" src="../../assets/images/drops1.png" alt="Drops image1">
+            <img class="background__drops-1" src="../../assets/images/drops1_base.png" alt="Drops image1">
+            <img class="background__drops-1_add-1" src="../../assets/images/drops1_add_1.png" alt="Drops image1">
+            <img class="background__drops-1_add-2" src="../../assets/images/drops1_add_2.png" alt="Drops image1">
             <img class="background__panda-0" src="../../assets/images/image_panda-0.png" alt="Panda image1">
             <img class="background__drops-2" src="../../assets/images/drops2.png" alt="Drops image2">
           </div>
@@ -71,8 +73,8 @@
           </ul>
         </div>
         <p class="carousel-1__text">
-          The application Оnline zoo will allow you to watch zoos' and nature reserves' inhabitants in live. Currently, under video-surveillance are pandas in China, eagles on Catalina Island (USA), alligators in Florida and gorillas in the Congo. We are expanding our capabilities and soon online you will meet Arctic snowy owl in Alaska, Penguin in California, Elephant from South Africa and Polar bear from Canada. You will see unique video-shots at any time of the day. If you liked a pet you watch and you want to please it with a delicious treat, you can pay a donation and the animal will receive a surprise from you during feeding hours.
-          <br>
+          The application Оnline zoo will allow you to watch zoos' and nature reserves' inhabitants in live. Currently, under video-surveillance are pandas in China, eagles on Catalina Island (USA), alligators in Florida and gorillas in the Congo. We are expanding our capabilities and soon online you will meet Arctic snowy owl in Alaska, Penguin in California, Elephant from South Africa and Polar bear from Canada. You will see unique video-shots at any time of the day. If you liked a pet you watch and you want to please it <br class="carousel-1__text_br-2"> with <br class="carousel-1__text_br-1"> a delicious treat, you can pay a donation and the animal will receive a surprise from you during feeding hours.
+          <br class="carousel-1__text_br-1">
           We want to thank you for helping the animals and give you <a href="">discount coupons</a> from our partners.
         </p>
       </article>
@@ -86,8 +88,8 @@
               <p class="img__capture">Panda, China</p>
             </a>
             <a class="carousel-2__img-link">
-              <img class="carousel-2__img" src="../../assets/images/image_polarbear-2.png" alt="Polar Bear, Canada">
-              <p class="img__capture">Polar Bear, Canada</p>
+              <img class="carousel-2__img" src="../../assets/images/image_polarbear-2.png" alt="Polar bear, Canada">
+              <p class="img__capture">Polar bear, Canada</p>
             </a>
           </div>
           <div class="carousel-2__img-wrapper">
@@ -96,8 +98,8 @@
               <p class="img__capture">Alligator, USA</p>
             </a>
             <a class="carousel-2__img-link" href="../zoos/eagle/index.html">
-              <img class="carousel-2__img" src="../../assets/images/image_eagle-2.png" alt="Bald Eagle, USA">
-              <p class="img__capture">Bald Eagle, USA</p>
+              <img class="carousel-2__img" src="../../assets/images/image_eagle-2.png" alt="Bald eagle, USA">
+              <p class="img__capture">Bald eagle, USA</p>
             </a>
           </div>
           <div class="carousel-2__img-wrapper">
@@ -110,7 +112,7 @@
               <p class="img__capture">Arctic snowy owl, Alaska</p>
             </a>
           </div>
-          <div class="carousel-2__img-wrapper">
+          <div class="carousel-2__img-wrapper carousel-2__img-wrapper_last">
             <a class="carousel-2__img-link">
               <img class="carousel-2__img" src="../../assets/images/image_elefant-2.png" alt="Elephant, South Africa">
               <p class="img__capture">Elephant, South Africa</p>
@@ -134,14 +136,8 @@
               <figcaption class="img__figcaption">You can pay for a donation to any animal using your Credit/Debit card</figcaption>
             </figure>
             <figure class="scheme__figure">
-              <img class="scheme__arrow-up" src="../../assets/images/high_arrow.png" alt="">
-            </figure>
-            <figure class="scheme__figure">
               <img class="scheme__img" src="../../assets/images/zoo_scheme.png" alt="Zoo picture">
               <figcaption class="img__figcaption">Donations will go to the account of the zoo or nature reserve</figcaption>
-            </figure>
-            <figure class="scheme__figure">
-              <img class="scheme__arrow-down" src="../../assets/images/low_arrow.png" alt="">
             </figure>
             <figure class="scheme__figure">
               <img class="scheme__img" src="../../assets/images/panda_scheme.png" alt="Panda eating a bambook stick">
@@ -155,7 +151,7 @@
           <div class="testimonials__grid">
             <img class="testimonials__user-img" src="../../assets/images/user-1.png" alt="Karen Maitland">
             <p class="testimonials__user-name">Karen Maitland</p>
-            <img class="testimonials__money-logo" src="../../assets/icons/money.png" alt="Bald Eagle, USA">
+            <img class="testimonials__money-logo" src="../../assets/icons/money.png" alt="Coin icon">
             <p class="testimonials__money-summ">+$10</p>
             <p class="testimonials__speech">
               "Thank you so much for these wonderful live webcams of the eagles on Catalina Island. Being able to watch them in their natural habitat as opposed to zoos is so wonderful. I cannot see myself ever being able to come up there to see them in person, so this is a great substitute. Thank you again."
@@ -164,7 +160,7 @@
           <div class="testimonials__grid">
             <img class="testimonials__user-img" src="../../assets/images/user-2.png" alt="Sara Jones">
             <p class="testimonials__user-name">Sara Jones</p>
-            <img class="testimonials__money-logo" src="../../assets/icons/money.png" alt="Bald Eagle, USA">
+            <img class="testimonials__money-logo" src="../../assets/icons/money.png" alt="Coin icon">
             <p class="testimonials__money-summ">+$13</p>
             <p class="testimonials__speech">
               "A disability prevents me from enjoying the outdoors and travel like I used to do. I really enjoy all the live cams and can spend HOURS watching real-time entertainment. Wild life style!"
@@ -173,7 +169,7 @@
           <div class="testimonials__grid">
             <img class="testimonials__user-img" src="../../assets/images/user-3.png" alt="Alex Barden">
             <p class="testimonials__user-name">Alex Barden</p>
-            <img class="testimonials__money-logo" src="../../assets/icons/money.png" alt="Bald Eagle, USA">
+            <img class="testimonials__money-logo" src="../../assets/icons/money.png" alt="Coin icon">
             <p class="testimonials__money-summ">+$7</p>
             <p class="testimonials__speech">
               "Here's a huge "thank-you" from New Hampshire - you allow me to travel the world without ever leaving the comfort of my office chair. Jammies on and coffee cup in hand, I am Phineas Fogg!!"
@@ -182,7 +178,7 @@
           <div class="testimonials__grid">
             <img class="testimonials__user-img" src="../../assets/images/user-4.png" alt="Alene Ray">
             <p class="testimonials__user-name">Alene Ray</p>
-            <img class="testimonials__money-logo" src="../../assets/icons/money.png" alt="Bald Eagle, USA">
+            <img class="testimonials__money-logo" src="../../assets/icons/money.png" alt="Coin icon">
             <p class="testimonials__money-summ">+$10</p>
             <p class="testimonials__speech">
               "Thank you for all the knowledge, education, pleasure and happiness you have add to all our lives at no expense on our part. My humble thanks and gratitude are being wished for all of you. I want to thank you and feed the animals a small reward"
@@ -222,9 +218,6 @@
           <p class="footer__copyright">Copyright ©RSSchool and ©Yem Digital 2020 - 2021</p>
           <p class="footer__reference">Grigoreva Margarita</p>
         </div>
-        <!-- <div class="footer_bg">
-          <img class="footer__bg-img" src="../../assets/images/footer_comb_bg.png" alt="">
-        </div> -->
       </div>
     </footer>
   </body>
