feat: add adaptive landing 320

--- a/online-zoo/pages/landing/index.html
+++ b/online-zoo/pages/landing/index.html
@@ -38,6 +38,9 @@
             </li>
           </ul>
         </nav>
+        <div class="header__burger">
+          <img src="../../assets/icons/burger.svg" alt="Burger menu">
+        </div>
       </div>
     </header>
     <main class="main">
@@ -56,6 +59,7 @@
             <img class="background__drops-1" src="../../assets/images/drops1_base.png" alt="Drops image1">
             <img class="background__drops-1_add-1" src="../../assets/images/drops1_add_1.png" alt="Drops image1">
             <img class="background__drops-1_add-2" src="../../assets/images/drops1_add_2.png" alt="Drops image1">
+            <img class="background__drops-1_320" src="../../assets/images/drops1_320.png" alt="Drops image1">
             <img class="background__panda-0" src="../../assets/images/image_panda-0.png" alt="Panda image1">
             <img class="background__drops-2" src="../../assets/images/drops2.png" alt="Drops image2">
           </div>
@@ -65,15 +69,23 @@
         <h3 class="article__heading carousel-1__heading">How it works</h3>
         <div class="carousel-1_bg-wrapper">
           <ul class="carousel-1__list">
-            <li><img class="carousel-1__img" src="../../assets/images/image_eagle-1.png" alt="Eagle"></li>
-            <li class="item_mid"><img class="carousel-1__img img_m" src="../../assets/images/image_tiger-1.png" alt="Tiger"></li>
-            <li class="item_up"><img class="carousel-1__img img_l" src="../../assets/images/image_panda-1.png" alt="Panda"></li>
-            <li class="item_mid"><img class="carousel-1__img img_m" src="../../assets/images/image_pavian-1.png" alt="Pavian"></li>
-            <li><img class="carousel-1__img" src="../../assets/images/image_elefant-1.png" alt="Elefant"></li>
+            <li class="carousel-1__item carousel-1__item_down"><img class="carousel-1__img img_s" src="../../assets/images/image_eagle-1.png" alt="Eagle"></li>
+            <li class="carousel-1__item carousel-1__item_mid"><img class="carousel-1__img img_m" src="../../assets/images/image_tiger-1.png" alt="Tiger"></li>
+            <li class="carousel-1__item carousel-1__item_up"><img class="carousel-1__img img_l" src="../../assets/images/image_panda-1.png" alt="Panda"></li>
+            <li class="carousel-1__item carousel-1__item_mid"><img class="carousel-1__img img_m" src="../../assets/images/image_pavian-1.png" alt="Pavian"></li>
+            <li class="carousel-1__item carousel-1__item_down carousel-1__item_last"><img class="carousel-1__img img_s" src="../../assets/images/image_elefant-1.png" alt="Elefant"></li>
           </ul>
         </div>
         <p class="carousel-1__text">
-          The application Оnline zoo will allow you to watch zoos' and nature reserves' inhabitants in live. Currently, under video-surveillance are pandas in China, eagles on Catalina Island (USA), alligators in Florida and gorillas in the Congo. We are expanding our capabilities and soon online you will meet Arctic snowy owl in Alaska, Penguin in California, Elephant from South Africa and Polar bear from Canada. You will see unique video-shots at any time of the day. If you liked a pet you watch and you want to please it <br class="carousel-1__text_br-2"> with <br class="carousel-1__text_br-1"> a delicious treat, you can pay a donation and the animal will receive a surprise from you during feeding hours.
+          The application Оnline zoo will allow
+          <br class="carousel-1__text_br-3">
+          you to watch zoos' and nature reserves' inhabitants in live. Currently, under
+          <br class="carousel-1__text_br-3">
+          video-surveillance are pandas in China, eagles on Catalina Island (USA), alligators in Florida and gorillas in the Congo. We are expanding our capabilities and soon online you will meet Arctic snowy owl in Alaska, Penguin in California, Elephant from South Africa and Polar bear from Canada. You will see unique video-shots at any time of the day. If you liked a pet you watch and you want to please it
+          <br class="carousel-1__text_br-2">
+          with
+          <br class="carousel-1__text_br-1">
+          a delicious treat, you can pay a donation and the animal will receive a surprise from you during feeding hours.
           <br class="carousel-1__text_br-1">
           We want to thank you for helping the animals and give you <a href="">discount coupons</a> from our partners.
         </p>
