feat: add map adaptive

--- a/online-zoo/pages/map/index.html
+++ b/online-zoo/pages/map/index.html
@@ -31,6 +31,7 @@
           />
           <h1 class="hidden-heading">Online Zoo</h1>
         </a>
+
         <nav class="header__nav">
           <ul class="nav__list">
             <li>
@@ -57,6 +58,9 @@
             </li>
           </ul>
         </nav>
+        <div class="header__burger">
+          <img src="../../assets/icons/burger.svg" alt="Burger menu" />
+        </div>
       </div>
     </header>
     <main class="main">
@@ -107,7 +111,6 @@
               </div>
             </div>
           </div>
-
           <div class="map__item item_eagle">
             <div>
               <a href="../zoos/eagle/index.html" class="item__logo logo_eagle">
@@ -150,6 +153,7 @@
           <div class="map__item item_zoom">
             <img src="../../assets/images/zoom.png" alt="" />
           </div>
+
           <div class="map__item item_country-name">
             <p class="item_text-1">USA</p>
           </div>
@@ -177,7 +181,7 @@
               alt="Online zoo"
             />
           </a>
-          <a>
+          <a class="footer__btn">
             <button class="btn btn_action_donate">Donate for volunteers</button>
           </a>
           <ul class="footer__nav">
@@ -243,16 +247,11 @@
             title="Yem Digital"
           />
           <p class="footer__copyright">
-            Copyright ©RSSchool and ©Yem Digital 2020 - 2021
+            Copyright ©RSSchool
+            <span class="footer__copyright_and">and</span> ©Yem Digital 2020 -
+            2021
           </p>
           <p class="footer__reference">Grigoreva Margarita</p>
-        </div>
-        <div class="footer_bg">
-          <img
-            class="footer__bg-img"
-            src="../../assets/images/footer_comb_bg.png"
-            alt=""
-          />
         </div>
       </div>
     </footer>
