--- a/online-zoo/pages/zoos/panda/index.html
+++ b/online-zoo/pages/zoos/panda/index.html
@@ -23,14 +23,11 @@
   <body class="page">
     <header class="header">
       <div class="header__flex">
-        <a href="../../landing/index.html" class="header__logo">
-          <img
-            class="header__logo-img"
-            src="../../../assets/icons/logo.png"
-            alt="Online Zoo"
-          />
+        <a href="../landing/index.html" class="header__logo">
+          <img class="header__logo-img" src="../../../assets/icons/logo.png" alt="Online Zoo" />
           <h1 class="hidden-heading">Online Zoo</h1>
         </a>
+
         <nav class="header__nav">
           <ul class="nav__list">
             <li>
@@ -43,20 +40,16 @@
               <a class="nav__item nav__item-highlighted"> Zoos </a>
             </li>
             <li>
-              <a href="../../contacts/index.html" class="nav__item">
-                Contact us
-              </a>
+              <a href="../../contacts/index.html" class="nav__item"> Contact us </a>
             </li>
             <li>
-              <a
-                href="https://www.figma.com/file/aBvQMVmI665DtzprpiniuH/online-zoo?node-id=0%3A1"
-                class="lis__item nav__item"
-              >
-                Design
-              </a>
+              <a href="https://www.figma.com/file/aBvQMVmI665DtzprpiniuH/online-zoo?node-id=0%3A1" class="lis__item nav__item"> Design </a>
             </li>
           </ul>
         </nav>
+        <div class="header__burger">
+          <img src="../../assets/icons/burger.svg" alt="Burger menu">
+        </div>
       </div>
     </header>
     <aside class="side-bar">
