fix: fix map adaptive zoom button

--- a/online-zoo/pages/map/index.html
+++ b/online-zoo/pages/map/index.html
@@ -82,13 +82,15 @@
                 src="../../assets/icons/tooltip_tip.png"
                 alt=""
               />
-              <div class="tooltip__text">
+              <div class="tooltip__text-wrapper">
                 <p class="tooltip__text text_uppercase">Alligator,</p>
                 <p class="tooltip__text">Florida, USA</p>
+                <a class="tooltip__link" href="../zoos/alligator/index.html">
+                  <button class="btn tooltip__btn">Watch online</button>
+                </a>
               </div>
             </div>
           </div>
-
           <div class="map__item item_panda">
             <div>
               <a href="../zoos/panda/index.html" class="item__logo logo_panda">
@@ -105,9 +107,12 @@
                 src="../../assets/icons/tooltip_tip.png"
                 alt=""
               />
-              <div class="tooltip__text">
+              <div class="tooltip__text-wrapper">
                 <p class="tooltip__text text_uppercase">Panda,</p>
                 <p class="tooltip__text">China</p>
+                <a class="tooltip__link" href="../zoos/panda/index.html">
+                  <button class="btn tooltip__btn">Watch online</button>
+                </a>
               </div>
             </div>
           </div>
@@ -123,9 +128,12 @@
                 src="../../assets/icons/tooltip_tip.png"
                 alt=""
               />
-              <div class="tooltip__text">
+              <div class="tooltip__text-wrapper">
                 <p class="tooltip__text text_uppercase">Eagle,</p>
                 <p class="tooltip__text">California, USA</p>
+                <a class="tooltip__link" href="../zoos/eagle/index.html">
+                  <button class="btn tooltip__btn">Watch online</button>
+                </a>
               </div>
             </div>
           </div>
@@ -144,14 +152,14 @@
                 src="../../assets/icons/tooltip_tip.png"
                 alt=""
               />
-              <div class="tooltip__text">
+              <div class="tooltip__text-wrapper">
                 <p class="tooltip__text text_uppercase">Gorilla,</p>
                 <p class="tooltip__text">Eastern DRC</p>
+                <a class="tooltip__link" href="../zoos/gorilla/index.html">
+                  <button class="btn tooltip__btn">Watch online</button>
+                </a>
               </div>
             </div>
-          </div>
-          <div class="map__item item_zoom">
-            <img src="../../assets/images/zoom.png" alt="" />
           </div>
 
           <div class="map__item item_country-name">
@@ -163,6 +171,9 @@
           <div class="map__item item_country-name">
             <p class="item_text-3">China</p>
           </div>
+        </div>
+        <div class="map__item item_zoom">
+          <img src="../../assets/images/zoom.png" alt="" />
         </div>
         <img
           class="map__img"
