--- a/online-zoo/pages/zoos/panda/index.html
+++ b/online-zoo/pages/zoos/panda/index.html
@@ -24,7 +24,11 @@
     <header class="header">
       <div class="header__flex">
         <a href="../landing/index.html" class="header__logo">
-          <img class="header__logo-img" src="../../../assets/icons/logo.png" alt="Online Zoo" />
+          <img
+            class="header__logo-img"
+            src="../../../assets/icons/logo.png"
+            alt="Online Zoo"
+          />
           <h1 class="hidden-heading">Online Zoo</h1>
         </a>
 
@@ -40,15 +44,22 @@
               <a class="nav__item nav__item-highlighted"> Zoos </a>
             </li>
             <li>
-              <a href="../../contacts/index.html" class="nav__item"> Contact us </a>
+              <a href="../../contacts/index.html" class="nav__item">
+                Contact us
+              </a>
             </li>
             <li>
-              <a href="https://www.figma.com/file/aBvQMVmI665DtzprpiniuH/online-zoo?node-id=0%3A1" class="lis__item nav__item"> Design </a>
+              <a
+                href="https://www.figma.com/file/aBvQMVmI665DtzprpiniuH/online-zoo?node-id=0%3A1"
+                class="lis__item nav__item"
+              >
+                Design
+              </a>
             </li>
           </ul>
         </nav>
         <div class="header__burger">
-          <img src="../../assets/icons/burger.svg" alt="Burger menu">
+          <img src="../../../assets/icons/burger.svg" alt="Burger menu" />
         </div>
       </div>
     </header>
@@ -144,6 +155,11 @@
           allowfullscreen
         >
         </iframe>
+
+        <a class="link_feed">
+          <button class="btn btn_action_feed">Feed</button>
+        </a>
+
         <div class="video__wrapper">
           <iframe
             class="video__small-frame"
@@ -245,7 +261,7 @@
               alt="Online zoo"
             />
           </a>
-          <a>
+          <a class="footer__btn">
             <button class="btn btn_action_donate">Donate for volunteers</button>
           </a>
           <ul class="footer__nav">
@@ -313,16 +329,11 @@
             title="Yem Digital"
           />
           <p class="footer__copyright">
-            Copyright ©RSSchool and ©Yem Digital 2020 - 2021
+            Copyright ©RSSchool
+            <span class="footer__copyright_and">and</span> ©Yem Digital 2020 -
+            2021
           </p>
           <p class="footer__reference">Grigoreva Margarita</p>
-        </div>
-        <div class="footer_bg">
-          <img
-            class="footer__bg-img"
-            src="../../../assets/images/footer_comb_bg.png"
-            alt=""
-          />
         </div>
       </div>
     </footer>
